fixed format bug on mobile

--- a/source/assets/stylesheets/components/_card.scss
+++ b/source/assets/stylesheets/components/_card.scss
@@ -92,7 +92,7 @@
     transition: transform 250ms cubic-bezier(0.61,-0.19, 0.7,-0.11);
     &:hover {
       transform: translateY(-20%);
-      opacity: 1;
+      opacity: 1 !important;
     }
   }
   i {
